# fastapi

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.dev.yml  pyproject.toml
.github/workflows/: test-build-deploy.yml  test.yml
docs/: architecture.md  crud_item_store.md  development.md  exceptions.md  logger.md  responses.md  roadmap.md  shared-modules.md  testing.md
examples/: logger_usage.py
keycloak/: opentaberna-realm.json
src/: Dockerfile
src/app/: db_models.py  main.py  worker.py  worker_main.py
src/app/chore/: lifespan.py
src/app/services/admin/: __init__.py  dependencies.py
src/app/services/admin/functions/: __init__.py  admin_transformations.py  order_context.py  packing_documents.py  send_tracking_email.py  shipment_functions.py
src/app/services/admin/models/: __init__.py  (+1 more)
src/app/services/crud_item_store/: crud_item_store.py
src/app/services/customers/: __init__.py
src/app/services/fulfillment/: __init__.py
src/app/services/inventory/: __init__.py
src/app/services/orders/: __init__.py  orders.py
src/app/services/payments/: __init__.py  dependencies.py
src/app/services/shipments/: __init__.py
src/app/services/webhooks/: __init__.py
src/app/shared/config/: __init__.py  settings.py
src/app/shared/database/: session.py
src/app/shared/exceptions/: errors.py  interfaces.py
src/app/shared/logger/: __init__.py  config.py  enums.py  factory.py  interfaces.py  logger.py
src/app/shared/responses/: base.py  error.py  factory.py
src/app/shared/storage/: __init__.py  interface.py  minio_adapter.py
tests/: test_admin_integration.py  test_admin_unit.py  test_config.py  test_crud_item_store_integration.py  test_customers_integration.py  test_customers_unit.py  test_exceptions_module.py  test_fulfillment_integration.py  test_fulfillment_unit.py  test_inventory_integration.py  test_inventory_unit.py  test_orders_integration.py  test_orders_unit.py  test_orders_webhooks.py  test_payment_adapters.py  test_responses_module.py
(+106 files in other folders)
