[project]
name = "fastapi-opentaberna"
version = "0.1.0"
description = "FastAPI by the OpenTaberna Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.5",
    "cryptography>=46.0.3",
    "fastapi>=0.124.0",
    "pytest>=9.0.2",
    "python-keycloak>=5.8.1",
    "ruff>=0.14.8",
    "uvicorn>=0.38.0",
]
