[tool.pytest.ini_options]
asyncio_mode = "auto"

[project]
name = "fastapi-opentaberna"
version = "0.1.0"
description = "FastAPI by the OpenTaberna Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "cryptography>=46.0.6",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "python-keycloak>=7.1.1",
    "ruff>=0.15.8",
    "sqlalchemy[asyncio]>=2.0.48",
    "stripe>=15.0.1",
    "uvicorn>=0.42.0",
]
